--- a/.github/workflows/generate_my_figura_avatar_readme.yaml
+++ b/.github/workflows/generate_my_figura_avatar_readme.yaml
@@ -38,7 +38,7 @@ jobs:
         run: npm install
       - name: Generate README
         working-directory: ./generator
-        run: ./node_modules/.bin/ts-node ./readme_generator.ts ${{ inputs.repository-name }} Gakuto1112/FiguraAvatarsReadmeTemplate main
+        run: ./node_modules/.bin/ts-node ./readme_generator.ts ../avatar/.github ${{ inputs.repository-name }}
       - id: check_diff
         name: Check diff
         working-directory: ./avatar
