--- a/.github/workflows/generate_my_figura_avatar_readme.yaml
+++ b/.github/workflows/generate_my_figura_avatar_readme.yaml
@@ -34,8 +34,7 @@ jobs:
         working-directory: ./generator
         run: npm install
       - name: Enable problem matcher
-        working-directory: ./generator/.github
-        run: echo '::add-matcher::problem_matcher.json'
+        run: echo '::add-matcher::./generator/.github/problem_matcher.json'
       - name: Generate README
         working-directory: ./generator
         run: ./node_modules/.bin/ts-node ./readme_generator.ts ../avatar/.github ${{ github.repository }}
