--- a/.github/workflows/generate_my_figura_avatar_readme.yaml
+++ b/.github/workflows/generate_my_figura_avatar_readme.yaml
@@ -37,7 +37,7 @@ jobs:
         run: echo '::add-matcher::./generator/.github/problem_matcher.json'
       - name: Generate README
         working-directory: ./generator
-        run: ./node_modules/.bin/ts-node ./readme_generator.ts ../avatar/.github ${{ github.repository }}
+        run: ./node_modules/.bin/ts-node ./src/readme_generator.ts ../avatar/.github ${{ github.repository }}
       - id: check_diff
         name: Check diff
         working-directory: ./avatar
