push時にdispatcherが呼ばれる対象のファイル範囲を拡大

--- a/.github/workflows/call_dispatcher.yaml
+++ b/.github/workflows/call_dispatcher.yaml
@@ -7,7 +7,7 @@ on:
     paths:
       - templates/**
       - src/**
-      - .github/workflows/call_dispatcher.yaml
+      - .github/workflows/**
 
 jobs:
   call:
