--- a/.github/workflows/call_dispatcher.yml
+++ b/.github/workflows/call_dispatcher.yml
@@ -13,6 +13,8 @@ jobs:
   call:
     name: Call dispatchers
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     strategy:
       matrix:
         target-repository: ${{ fromJSON(vars.TARGET_REPOSITORIES) }}
@@ -22,5 +24,5 @@ jobs:
           curl https://api.github.com/repos/Gakuto1112/${{ matrix.target-repository }}/dispatches \
           -X POST \
           -H 'Accept: application/vnd.github+json' \
-          -H 'Authorization: Bearer ${{ secrets.DISPATCH_TOKEN }}' \
+          -H 'Authorization: Bearer ${{ github.token }}' \
           -d '{"event_type": "dispatch_readme"}'
