--- a/.github/workflows/call_dispatcher.yml
+++ b/.github/workflows/call_dispatcher.yml
@@ -25,4 +25,5 @@ jobs:
           -X POST \
           -H 'Accept: application/vnd.github+json' \
           -H 'Authorization: Bearer ${{ github.token }}' \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
           -d '{"event_type": "dispatch_readme"}'
