--- a/.github/workflows/call_dispatcher.yml
+++ b/.github/workflows/call_dispatcher.yml
@@ -21,9 +21,12 @@ jobs:
     steps:
       - name: Call dispatcher
         run: |
-          curl https://api.github.com/repos/Gakuto1112/${{ matrix.target-repository }}/dispatches \
-          -X POST \
-          -H 'Accept: application/vnd.github+json' \
-          -H 'Authorization: Bearer ${{ github.token }}' \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          -d '{"event_type": "dispatch_readme"}'
+          gh api \
+            --method POST \
+            -H 'Accept: application/vnd.github+json' \
+            -H 'X-GitHub-Api-Version: 2022-11-28' \
+            /repos/${REPOSITORY}/dispatches \
+            -f 'event_type=dispatch_readme'
+        env:
+          GH_TOKEN: ${{ github.token }}
+          REPOSITORY: ${{ matrix.target-repository }}
