--- a/.github/workflows/call_dispatcher.yml
+++ b/.github/workflows/call_dispatcher.yml
@@ -25,7 +25,7 @@ jobs:
             --method POST \
             -H 'Accept: application/vnd.github+json' \
             -H 'X-GitHub-Api-Version: 2022-11-28' \
-            /repos/${REPOSITORY}/dispatches \
+            /repos/Gakuto1112/${REPOSITORY}/dispatches \
             -f 'event_type=dispatch_readme'
         env:
           GH_TOKEN: ${{ github.token }}
