--- a/.github/workflows/call_dispatcher.yml
+++ b/.github/workflows/call_dispatcher.yml
@@ -13,8 +13,6 @@ jobs:
   call:
     name: Call dispatchers
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     strategy:
       matrix:
         target-repository: ${{ fromJSON(vars.TARGET_REPOSITORIES) }}
@@ -28,5 +26,5 @@ jobs:
             /repos/Gakuto1112/${REPOSITORY}/dispatches \
             -f 'event_type=dispatch_readme'
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
           REPOSITORY: ${{ matrix.target-repository }}
