--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "type": "git",
     "url": "https://github.com/Gakuto1112/TabletClockServer.git"
   },
-  "dependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+  "devDependencies": {
+    "@types/node": "^24.6.2",
+    "typescript": "^5.9.3"
   }
 }
