--- a/.github/workflows/generate_my_figura_avatar_readme.yml
+++ b/.github/workflows/generate_my_figura_avatar_readme.yml
@@ -15,17 +15,18 @@ jobs:
       contents: write
     steps:
       - name: Checkout avatar repository
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@v5.0.0
         with:
           path: ./avatar
           ref: ${{ inputs.branch-name }}
       - name: Checkout template repository
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@v5.0.0
         with:
-          repository: Gakuto1112/FiguraAvatarsReadmeTemplate
           path: ./generator
+          repository: Gakuto1112/FiguraAvatarsReadmeTemplate
+          ref: v1.3.0
       - name: Setup Node.js@20.8.0
-        uses: actions/setup-node@v4.4.0
+        uses: actions/setup-node@v5.0.0
         with:
           node-version: 20.8.0
           cache: npm
