ワークフローをトリガーする条件をタグ作成時に変更

--- a/.github/workflows/call_dispatcher.yml
+++ b/.github/workflows/call_dispatcher.yml
@@ -2,8 +2,8 @@ name: Call dispatcher
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - v*
     paths:
       - templates/**
       - src/**
